# IntelliRoute-team

./: .gitignore  CHANGELOG.md  IntelliRoute-backend-demo-only.patch  IntelliRoute_Presentation.pptx  PRESENTATION_NOTES.docx  README.md  REPORT.docx  TEAM_QA_BANK.md  pyproject.toml  requirements.txt
artifacts/: user_feedback.sqlite3
docs/: ARCHITECTURE.md  PROVIDER_QUALITY_SCORE.md  REPLAY_EVAL_HARNESS.md  TEAM_WORKFLOW_BUDGETS.md
docs/report/: IntelliRoute_CMPE273_Report.tex
frontend/: index.html  index1.html
frontend/demo/: aggregate_summary.demo.json
scripts/: apply_model_logging_patch.py  demo.py  demo_failure_recovery.py  generate_workload.py  make_slides.py  replay_eval.py  run_all.py  start_stack.py  start_stack_cloud.py
tests/: test_accounting.py  test_admin_daily_quotas_api.py  test_admin_force_fail_api.py  test_brownout.py  test_circuit_breaker.py  test_election.py  test_eval_artifacts.py  test_eval_harness.py  test_eval_isolation.py  test_feedback.py  test_feedback_previews_analysis.py  test_gateway_system_routes.py  test_integration.py  test_intent.py  test_mock_dynamic_registration.py  test_mock_provider_catalog.py  test_models_budget_scopes.py  test_policy.py  test_policy_engine.py  test_provider_clients.py  test_provider_daily_quota.py  test_provider_mode.py  test_provider_retry_logic.py  test_provider_telemetry_alias.py  test_queue.py  test_registry.py  test_registry_discovery.py  test_router_routing_mode.py  test_router_user_feedback_api.py  test_token_bucket.py  test_user_feedback_sqlite.py  test_user_feedback_store.py  test_weight_tuner.py
(+38 files in other folders)
